done booHoo, finders keepers and slice and splice

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./fccBasicAlgorithmScripting./nineTruncateAString.js"></script>
+    <script src="./fccBasicAlgorithmScripting./sliceAndSplice.js"></script>
   </body>
 </html>
