done falsy bouncer qn

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./fccBasicAlgorithmScripting./twelveMutations.js"></script>
+    <script src="./fccBasicAlgorithmScripting./thirteenFalsyBouncer.js"></script>
   </body>
 </html>
