--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./fccBasicAlgorithmScripting./thirteenFalsyBouncer.js"></script>
+    <script src="./fccIntermediateAlgorithmScripting.js/sumAllNumsInRange.js"></script>
   </body>
 </html>
