done sumOf Primes qn.
It was an fcc intermediate qn.

doing multiple for loops helped me out.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./fccIntermediateAlgorithmScripting.js/sumAllNumsInRange.js"></script>
+    <script src="./fccIntermediateAlgorithmScripting.js/sumAllPrimes.js"></script>
   </body>
 </html>
